[tool.poetry]
name = "zflux"
version = "0.1.3"
description = ""
authors = ["Benedikt Kristinsson <benedikt@lokun.is>"]

[tool.poetry.dependencies]
python = "^3.9"
influxdb = "^5.3.0"
loguru = "^0.5.3"
requests = "^2.24.0"
pyyaml = "^5.3.1"
pyzmq = "^19.0.2"

[tool.poetry.scripts]
zflux = "zflux.zflux:main"
zf_ruok = "zflux.metricscli:cli_ruok"
zf_metrics = "zflux.metricscli:cli_metrics"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
loguru = "^0.5.3"
requests = "^2.24.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
